welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:4: error: value bas is not a member of object Math
  var f=Math.bas(b-c)
             ^lessBy10:5: error: value >== is not a member of Boolean
  if (d>=10 || e>=10 || f>==10) {
                         ^