welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  var d=Math.abs(a-b)
  var e=Math.abs(a-c)
  var f=Math.bas(b-c)
  if (d>=10 || e>=10 || f>==10) {
    return true
  } else return false
}